--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto api rest full red social",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Cori Caye Placido",
